web-infras/parser/tests/fixtures/babel/es2017/async-call/parenthesized-argument-object-double-proto/output.txt
[SyntaxError]: property name __proto__ appears more than once in object literal (1,23)
1|async({ __proto__: x, __proto__: y })
 |                     ^
